--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <div class="head-left">
                 <img src="img/1c9cea5a390cc5809e68ae2ac2011a07.jpg" alt="logo">
-                <button>Products</button>
+                <button>PUBG MOBILE</button>
             </div>
             <div class="head-right">
                 <p><a href="#">NEXUS</a></p>
